# klint

./: .gitignore  .jscpd.json  .releaserc.json  CHANGELOG.md  Cargo.toml  README.md  biome.json  bunfig.toml  cli.ts  klint.schema.json  klint.schema.yaml  klint.yaml  knip.json  package.json  tsconfig.json
.claude/: settings.json
.codex/: hooks.json
.cursor/: hooks.json
.husky/: install.mjs  pre-commit  pre-push
cli/: help.ts  install-skill.ts  output.ts  paths.ts  rust-config.ts  rust-engine.ts
core/: arch.ts  ast.ts  config.schema.ts  fixer.ts  native-binary.ts  paths.ts  rule-helpers.ts  runner.ts  types.ts
docs/: rust-engine.md
plugins/: index.ts  sonar.ts
python/: README.md  pyproject.toml  setup.py
python/klint/: __main__.py
rules/: index.ts  no-async-predicate.ts  no-consecutive-array-push.ts  no-date-equality.ts  no-floating-promise.ts  no-misused-promises.ts  no-nested-template-literals.ts  no-object-in-template.ts  no-optional-chain-on-non-nullable.ts  no-single-char-class.ts  no-string-match.ts  no-sync-in-async.ts  no-unguarded-json-parse.ts  prefer-at.ts  prefer-nullish-coalescing-assign.ts  prefer-string-raw-regexp.ts  prefer-string-raw.ts  prefer-string-replaceall.ts
tests/: arch-alias.test.ts  arch-forbidden.test.ts  arch-imports.test.ts  arch-maxlines.test.ts  arch-singleton.test.ts  custom-rules.test.ts  fixer.test.ts  homebrew-formula.test.ts  native-binary.test.ts  no-async-predicate.test.ts  no-consecutive-array-push.test.ts  no-floating-promise.test.ts  no-misused-promises.test.ts  no-nested-template-literals.test.ts  (+21 more)
(+53 files in other folders)
